# testing-in-python

./: .gitignore  pyproject.toml
src/: company.py  math.py
tests/unit/: test_company.py  test_math.py
