[tool.poetry]
name = "introduction-to-testing-in-python"
version = "0.1.0"
description = ""
authors = ["Magnus Moan <magnus.moan@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
coverage = "^5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
